syntax = "proto3";

package com.itau.authorizer.common.application.grpc;

import "google/protobuf/empty.proto";
import "TransactionExecutionRequest.proto";

option java_multiple_files = true;
option java_package = "com.itau.authorizer.common.application.adapter.in.grpc";
option java_outer_classname = "ExecuteTransactionProto";

service ExecuteTransaction {

  rpc ExecuteAccountTransaction(TransactionExecutionRequest) returns (google.protobuf.Empty);

}
